Block double-tap-zoom on iOS (fixes #2). Use shorter long-touch delay (and refactor as constant). Bump SW for version 1.2.

--- a/src/style.css
+++ b/src/style.css
@@ -58,6 +58,10 @@ li {
     color: white;
     font-size: calc(5vh + 5vw);
     text-align: center;
+
+    /* Blocks double-tap-zoom;
+       should be "none" but iOS only supports manipulation (doesn't disable pinch to zoom or panning) */
+    touch-action: manipulation;
 }
 
 #keypad-main {
